@@ -9727,6 +9727,7 @@ to you, depending on its output format.
 * kyo::                         
 * latex::                       
 * linux::                       
+* linux_::                      
 * macintosh::                   
 * mf::                          
 * mp::                          
@@ -9747,7 +9748,6 @@ to you, depending on its output format.
 * regis_::                      
 * rgip::                        
 * sun::                         
-* sun_::                        
 * svg::                         
 * tek410x::                     
 * tek410x_::                    
@@ -12068,7 +12068,7 @@ The other label -- account for long ticlabels:
 
 @end example
 
-@node linux, macintosh, latex, terminal
+@node linux, linux_, latex, terminal
 @subsubsection linux
 
 @c ?commands set terminal linux
@@ -12085,7 +12085,24 @@ environment variable GSVGAMODE for the default mode; if not set, it uses
 1024x768x256 as default mode or, if that is not possible, 640x480x16
 (standard VGA)."
 
-@node macintosh, mf, linux, terminal
+@node linux_, macintosh, linux, terminal
+@subsubsection linux
+
+@c ?commands set terminal linux
+@c ?set terminal linux
+@c ?set term linux
+@c ?terminal linux
+@c ?term linux
+@cindex linux
+@tmindex linux
+
+
+The `linux` driver has no additional options to specify.  It looks at the
+environment variable GSVGAMODE for the default mode; if not set, it uses
+1024x768x256 as default mode or, if that is not possible, 640x480x16
+(standard VGA)."
+
+@node macintosh, mf, linux_, terminal
 @subsubsection macintosh
 
 @c ?set terminal macintosh
@@ -13354,7 +13371,7 @@ Example:
 
 puts six graphs on a page in three rows of two in portrait orientation."
 
-@node sun, sun_, rgip, terminal
+@node sun, svg, rgip, terminal
 @subsubsection sun
 
 @c ?commands set terminal sun
@@ -13369,22 +13386,7 @@ puts six graphs on a page in three rows of two in portrait orientation."
 The `sun` terminal driver supports the SunView window system.  It has no
 options."
 
-@node sun_, svg, sun, terminal
-@subsubsection sun
-
-@c ?commands set terminal sun
-@c ?set terminal sun
-@c ?set term sun
-@c ?terminal sun
-@c ?term sun
-@cindex sun
-@tmindex sun
-
-
-The `sun` terminal driver supports the SunView window system.  It has no
-options."
-
-@node svg, tek410x, sun_, terminal
+@node svg, tek410x, sun, terminal
 @subsubsection svg
 
 @c ?commands set terminal svg
